--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,14 @@
 *{
     font-family: 'Yaldevi', sans-serif;
 }
-body{
-    background-color: #ffffff;
+html, body{
+    background-color: rgb(16, 20, 23) !important;
+}
+h1, h2, h3, h4, h5, h6{
+    color: rgb(247, 142, 102) !important;
+}
+html, body{
+    color: rgb(167, 158, 139) !important;
 }
 span{
     font-size: small;
